v1.9.0/product-specifications/core-functions/9.-verify-record.md
# 10. Verify record (Deprecated)

{% hint style="danger" %}
The current implementation for this feature has been deprecated in 1.9. \
\
We will be adding support for Verifiable Crendentials in 1.10
{% endhint %}

\
Certificates come equipped with a printed QR code that, when scanned, directs the user to OpenCRVS. This feature enables users to cross-check the information presented on the certificate against the registration data stored within OpenCRVS, thereby ensuring the certificate's authenticity and validity.

### **Pre condition**

A record has been registered

### **Triggers**

* QR code on a certificate is scanned
* A user has `scope:record.registration-verify-certified-copies`

### **Standard flow**

1. QR code navigates user to OpenCRVS
2. User logs in using their username and password
3. User is presented with partial information about the record
4. User compares details recorded in the system with those on the certificate
5. User verifies that the certificate is genuine

### **Post conditions**

* User closes partial view of the record
* User can scan another certificate QR code

### **Variations/Exceptions**

* If the QR code is invalid, then the user is shown an invalid QR code message
* To prevent a man-in-the-middle attack, where someone creates a fake website resembling OpenCRVS to deceive users into believing that they are viewing genuine registration data, users are prompted to verify the URL of the webpage. It is essential to train users to check the authentic URL of their OpenCRVS instance to ensure they are accessing the genuine website.\
